--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   testing:
     name: Code qualite and testing
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     
     steps:
       - name: Clone repository
