--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -34,10 +34,13 @@ deps.gradle = gradle
 def kotlin = [:]
 
 versions.kotlin = "1.3.72"
+versions.kotlin_coroutines = "1.3.8"
 
 kotlin.stdlib = "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$versions.kotlin"
 kotlin.test = "org.jetbrains.kotlin:kotlin-test-junit:$versions.kotlin"
 kotlin.plugin = "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin"
+kotlin.coroutines = "org.jetbrains.kotlinx:kotlinx-coroutines-core:$versions.kotlin_coroutines"
+kotlin.coroutines_test = "org.jetbrains.kotlinx:kotlinx-coroutines-test:$versions.kotlin_coroutines"
 
 deps.kotlin = kotlin
 //endregion
