--- a/build.gradle
+++ b/build.gradle
@@ -12,13 +12,17 @@ buildscript {
         classpath deps.bintray.gradle_bintray_plugin
 
         classpath "com.google.dagger:hilt-android-gradle-plugin:2.28-alpha"
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
+plugins {
+    id("io.gitlab.arturbosch.detekt").version("$detekt_version")
+}
+
+
 allprojects {
     addRepos(repositories)
+    apply from: rootProject.file("detekt/detekt.gradle")
 }
 
 task clean(type: Delete) {
