--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -116,7 +116,7 @@ versions.bintray_plugin = "1.8.5"
 bintray.gradle_bintray_plugin = "com.jfrog.bintray.gradle:gradle-bintray-plugin:$versions.bintray_plugin"
 
 deps.bintray = bintray
-//endregio
+//endregion
 
 ext.deps = deps
 ext.detekt_version = versions.detekt
