--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,8 @@ buildscript {
 }
 
 plugins {
-    id("io.gitlab.arturbosch.detekt").version("$detekt_version")
+    id "io.gitlab.arturbosch.detekt" version "$detekt_version"
+    id "com.github.ben-manes.versions" version "$dependency_updates"
 }
 
 
