--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,7 @@ dependencies {
             deps.androidx.appcompat
     )
 
-    implementation "com.google.dagger:hilt-android:2.28-alpha"
+    implementation "com.google.dagger:hilt-android:2.28.3-alpha"
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha01"
 
     implementation "androidx.navigation:navigation-fragment-ktx:2.3.0-rc01"
@@ -58,10 +58,10 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     kapt "androidx.hilt:hilt-compiler:1.0.0-alpha01"
-    kapt "com.google.dagger:hilt-android-compiler:2.28-alpha"
+    kapt "com.google.dagger:hilt-android-compiler:2.28.3-alpha"
 
     testImplementation 'junit:junit:4.12'
 
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2-rc03'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0-rc03'
 }
