--- a/build.gradle
+++ b/build.gradle
@@ -11,19 +11,24 @@ buildscript {
 
         classpath deps.bintray.gradle_bintray_plugin
 
-        classpath "com.google.dagger:hilt-android-gradle-plugin:2.28-alpha"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:2.28.3-alpha"
     }
 }
 
 plugins {
     id "io.gitlab.arturbosch.detekt" version "$detekt_version"
     id "com.github.ben-manes.versions" version "$dependency_updates"
+    id "org.owasp.dependencycheck" version "$dependency_check"
 }
 
 
 allprojects {
     addRepos(repositories)
     apply from: rootProject.file("detekt/detekt.gradle")
+}
+
+subprojects {
+    apply plugin: 'org.owasp.dependencycheck'
 }
 
 task clean(type: Delete) {
