--- a/gradle/publish.properties
+++ b/gradle/publish.properties
@@ -1,4 +1,10 @@
-organization_id=redmadrobot-opensource
+home_page=https://github.com/RedMadRobot/PINkman
 group_id=com.redmadrobot
-repository=android
+
+gh_packages_repo="https://maven.pkg.github.com/RedMadRobot/PINkman
+sonatype_repo=https://oss.sonatype.org/service/local/staging/deploy/maven2
+
+license_name=MIT
+license_url=http://opensource.org/licenses/MIT
+
 lib_version=1.1.1
