Fix github packages url

--- a/gradle/publish.properties
+++ b/gradle/publish.properties
@@ -1,7 +1,7 @@
 home_page=https://github.com/RedMadRobot/PINkman
 group_id=com.redmadrobot
 
-gh_packages_repo="https://maven.pkg.github.com/RedMadRobot/PINkman
+gh_packages_repo=https://maven.pkg.github.com/RedMadRobot/PINkman
 sonatype_repo=https://oss.sonatype.org/service/local/staging/deploy/maven2
 
 license_name=MIT
