Update OSSRH server address

--- a/gradle/publish.properties
+++ b/gradle/publish.properties
@@ -2,7 +2,7 @@ home_page=https://github.com/RedMadRobot/PINkman
 group_id=com.redmadrobot
 
 gh_packages_repo=https://maven.pkg.github.com/RedMadRobot/PINkman
-sonatype_repo=https://oss.sonatype.org/service/local/staging/deploy/maven2
+sonatype_repo=https://s01.oss.sonatype.org/service/local/staging/deploy/maven2
 
 license_name=MIT
 license_url=http://opensource.org/licenses/MIT
